# gene-outlier-detection

./: .coveralls.yml  .travis.yml  README.md  docker-release.sh  pyproject.toml
data/: drug-genes.txt  input.csv  input.hdf  input.tsv  manifest.txt  normal.csv  normal.tsv  test-drug-genes.txt
docker/: Dockerfile
gene_outlier_detection/: cli.py  lib.py  main.py  meta_runner.py
tests/: run-coverage.sh  run-sample.sh  test_gene_outlier_detection.py
toil/: example.sh  toil-outlier-detection.py
