[tool.poetry]
name = "gene-outlier-detection"
version = "0.16a"
description = "A Bayesian model for identifying gene expression outliers for individual single samples (N-of-1) when compared to a cohort of background datasets."
authors = ["John Vivian <jtvivian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
matplotlib = "^3.0"
numpy = "^1.16"
pandas = "^0.24.1"
scipy = "^1.2"
seaborn = "^0.9.0"
sklearn = "^0.0.0"
tqdm = "^4.31"
pymc3 = "3.7"
tables = "^3.5"
theano = "^1.0.4"
arviz = "^0.4.0"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
outlier-detection = 'gene_outlier_detection.meta_runner:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
